# qwen3_from_scratch

./: .clang-format  .env.example  .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
cmake/: find_pytorch_vars.cmake
csrc/: py11bind.cpp
csrc/include/: cuda_funcs.cuh  kernel.h  utils.h
csrc/rms_norm/: rms_norm.cpp  rms_norm_cuda.cu
examples/: basic_generation.py  benchmark.py  qwen3_quant_study.py
examples/train/: convert_to_jsonl.py  dataset.py  train.py
exps/: attn_com.py  kv_cache_benchmark.py  rms_norm_benchmark.py  total_perf.py  triton_attn_benchmark.py  triton_attn_memory_benchmark.py  triton_rms_norm_benchmark.py
exps/reports/: kv_cache_benchmark_report.md  rms_norm_benchmark_report.md  rms_norm_optimization_report.md
exps/reports/rms_norm/: rms_norm_benchmark_report_block_1024.md  rms_norm_benchmark_report_block_32.md
src/qwen3_from_scratch/: __init__.py
src/qwen3_from_scratch/factory/: __init__.py  config.py  factory.py
src/qwen3_from_scratch/inference/: __init__.py  context.py  generate.py
src/qwen3_from_scratch/inference/kv_cache/: __init__.py  kv_cache.py  pre_allocated_kv_cache.py  simple_kv_cache.py
src/qwen3_from_scratch/kernels/: ops.pyi
src/qwen3_from_scratch/kernels/triton/: attn.py  feedback.py  gemm.py  rms_norm.py  rope.py  self_attn.py
src/qwen3_from_scratch/kernels/triton/fused/: fused_kvcache.py  fused_rms_norm_linear.py
src/qwen3_from_scratch/models/: __init__.py  attn.py  common.py  context.py  feedback.py  norm.py  parameter_loader.py  qwen3.py  rope.py  self_attn.py  transformer_block.py
src/qwen3_from_scratch/utils/: env.py
test/: conftest.py  test_attn.py  test_ffn.py  test_qwen3.py  test_rms_norm.py  test_rope.py  test_self_attn.py  test_transformer_block.py
test/triton/: test_fused.py
